make id field hidden

--- a/templates/_partials/fields/_hidden_id_field.html.twig
+++ b/templates/_partials/fields/_hidden_id_field.html.twig
@@ -1,1 +1,1 @@
-<input type="text" name="keys-{{ name }}" value="{{ field.id }}" />
+<input type="hidden" name="keys-{{ name }}" value="{{ field.id }}" />
