--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -9,38 +9,40 @@
     <div>
         {# The next section attempts to fill the panel in the sidebar with the contents of the
             'about'-block, if it exists. First, attempt to fetch the block by its slug #}
-        {% setcontent block = "blocks/about" %}
+{#        {% setcontent block = "blocks/about" %}#}
 
         {# check if we have a title. If so, we know we have content to display. Otherwise, we will
             output a default text, telling the user to create the 'blocks' in the backend. #}
-        {% if block.title is defined %}
+{#        {% if block.title is defined %}#}
 
-            <h5>{{ block.title }}</h5>
-            {{ block.content }}
+{#            <h5>{{ block.title }}</h5>#}
+{#            {{ block.content }}#}
 
-            {% set edit_link = block|edit_link %}
-            {% set content_link = block | link('block') %}
-            {% if content_link or edit_link %}
-                <p>
-                {%- if content_link %}
-                   <a href="{{ relative_path(content_link|e) }}">{{ __('general.phrase.read-more') }}</a>
-                {% endif -%}
-                {%- if edit_link %}
-                    / <a href="{{ edit_link }}">{{ __('general.phrase.edit') }}</a>
-                {% endif -%}
-                </p>
-            {% endif %}
+{#            {% set edit_link = block|edit_link %}#}
+{#            {% set content_link = block | link('block') %}#}
+{#            {% if content_link or edit_link %}#}
+{#                <p>#}
+{#                {%- if content_link %}#}
+{#                   <a href="{{ relative_path(content_link|e) }}">{{ __('general.phrase.read-more') }}</a>#}
+{#                {% endif -%}#}
+{#                {%- if edit_link %}#}
+{#                    / <a href="{{ edit_link }}">{{ __('general.phrase.edit') }}</a>#}
+{#                {% endif -%}#}
+{#                </p>#}
+{#            {% endif %}#}
 
-        {% else %}
+{#        {% else %}#}
 
-            <h5>{{ __('general.phrase.missing-about-page') }}</h5>
+{#            <h5>{{ __('general.phrase.missing-about-page') }}</h5>#}
 
-            <p>{{ __('general.phrase.missing-about-page-block') }}</p>
+{#            <p>{{ __('general.phrase.missing-about-page-block') }}</p>#}
 
-        {% endif %}
+{#        {% endif %}#}
+{#        #}
 
+{#        {% setcontent blocks = 'blocks/random/3' %}#}
+        {% setcontent blocks = 'blocks/first/3' %}
     </div>
-
     {# The next section iterates over all of the content types, and prints a list
         of the five latest records of each of them. The 'magic' happens in the
         setcontent tag.. ct.slug ~ "/latest/3" concatenates the slug of the
