When hovering over sidebar, it has priority over content

--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -6,6 +6,10 @@
   height: 100%;
   padding-top: 1.625rem;
 
+  &:hover{
+    z-index: 2;
+  }
+
   @include media-breakpoint-up(lg) {
     padding-top: 1.625rem;
   }
