--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -39,9 +39,17 @@
 
 {#        {% endif %}#}
 {#        #}
-
+{#        {% setcontent blocks = 'blocks/about' %}#}
+{#        {% setcontent blocks = 'blocks' %}#}
 {#        {% setcontent blocks = 'blocks/random/3' %}#}
-        {% setcontent blocks = 'blocks/first/3' %}
+{#        {% setcontent blocks = 'blocks/first/3' %}#}
+{#        {% setcontent blocks = 'blocks/latest/3' %}#}
+{#        {% setcontent blocks = 'blocks' where {'title': 'Molestiae qui quo officia.'} %}#}
+{#        {% setcontent blocks = 'blocks' where {'title': '%quo'} %}#}
+{#        {% setcontent blocks = 'blocks' where {'title': '%quo'} %}#}
+{#        {% setcontent blocks = 'blocks' where {'title': '%quo || %omnis'} %}#}
+        {% setcontent blocks = 'blocks' where {'title ||| slug': '%quo ||| %omnis'} %}
+        {{ dump(blocks) }}
     </div>
     {# The next section iterates over all of the content types, and prints a list
         of the five latest records of each of them. The 'magic' happens in the
