--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -48,8 +48,8 @@
 {#        {% setcontent blocks = 'blocks' where {'title': '%quo'} %}#}
 {#        {% setcontent blocks = 'blocks' where {'title': '%quo'} %}#}
 {#        {% setcontent blocks = 'blocks' where {'title': '%quo || %omnis'} %}#}
-        {% setcontent blocks = 'blocks' where {'title ||| slug': '%quo ||| %omnis'} %}
-        {{ dump(blocks) }}
+{#        {% setcontent blocks = 'blocks' where {'title ||| slug': '%quo ||| %omnis'} %}#}
+{#        {{ dump(blocks) }}#}
     </div>
     {# The next section iterates over all of the content types, and prints a list
         of the five latest records of each of them. The 'magic' happens in the
