--- a/assets/scss/modules/listing/row/_container.scss
+++ b/assets/scss/modules/listing/row/_container.scss
@@ -1,14 +1,11 @@
+.listing__records {
+  margin-bottom: 1.5*$spacer;
+}
+
 .listing--container {
   position: relative;
   display: flex;
-  // flex-wrap: wrap;
   width: 100%;
-  // z-index: $big-z-index;
-
-  // We raise the z-index by 1, to make sure the "Edit" dropdown is on top
-  &:hover {
-    // z-index: $big-z-index + 1;
-  }
 
   &.sortable-ghost {
     opacity: 0.1;
