Updating some branding things (links to boltcms.io)

--- a/templates/pages/about.html.twig
+++ b/templates/pages/about.html.twig
@@ -43,7 +43,7 @@
     </p>
 
     <p>
-        <a href="https://bolt.cm" class="btn btn-primary" target="_blank">
+        <a href="https://boltcms.io" class="btn btn-primary" target="_blank">
             <i class="fa fa-external-link-square-alt"></i> {{ 'about.visit_bolt'|trans }}
         </a>
         <a href="https://docs.bolt.cm" class="btn btn-secondary" target="_blank">
