Add data type and fix in fixtures for checkbox

--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -17,7 +17,7 @@
 {#        {% setcontent blocks = 'blocks' where {'title': '%quo'} %}#}
 {#        {% setcontent blocks = 'blocks' where {'title': '%quo || %dolore'} %}#}
 {#        {% setcontent blocks = 'blocks' where {'title ||| slug': '%quo ||| %dolore'} %}#}
-{#        {% setcontent showcases = 'showcases' where {'date': '<now'} %}#}
+        {% setcontent showcases = 'showcases' where {'date': '<now'} %}
 {#        {% setcontent blocks = 'blocks' orderby '-title,slug' %}#}
 
         {{ dump(blocks) }}
