Ugly flatpickr month height fix

--- a/assets/scss/modules/editor/fields/_date.scss
+++ b/assets/scss/modules/editor/fields/_date.scss
@@ -21,3 +21,7 @@
 .flatpickr-calendar input[type=number] {
   -moz-appearance: textfield;
 }
+
+.flatpickr-month {
+  height: 34px !important; // 34px is latest flatpickr repo value
+}
