--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -79,7 +79,7 @@
                                 <option value="{{ key }}" {% if sortBy == key %}selected{% endif %}>
                                     {{ filterOption }}
                                 </option>
-                                <option value="-{{ key }}" {% if sortBy == key %}selected{% endif %}>
+                                <option value="-{{ key }}" {% if sortBy == '-' ~ key %}selected{% endif %}>
                                     -{{ filterOption }}
                                 </option>
                             {% endfor %}
