Rename admin_menu() twig function to admin_menu_array() for consistency

--- a/templates/_base/layout.html.twig
+++ b/templates/_base/layout.html.twig
@@ -19,7 +19,7 @@
 <body>
 <div class="admin">
 
-    {% set admin_menu_json = admin_menu()|json_encode %}
+    {% set admin_menu_json = admin_menu_array()|json_encode %}
 
     <!-- Admin Toolbar -->
     <nav class="admin__toolbar" id="toolbar">
