Remove listTemplates function alias

--- a/templates/_partials/fields/templateselect.html.twig
+++ b/templates/_partials/fields/templateselect.html.twig
@@ -8,7 +8,7 @@
      - allowempty: A boolean to set whether or not we allow clearing the selection
  #}
 
-{% set options = listTemplates(field) %}
+{% set options = list_templates(field) %}
 {% set multiple = 'false' %}
 {% set allowempty = 'true' %}
 
