--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -1,5 +1,5 @@
 {%- if type != 'checkbox' -%}
-    <label for="{{ id }}" {% if type == 'collection' %}class="sr-only"{% endif %}>
+    <label for="{{ id }}" class="editor--label{% if type == 'collection' %} sr-only{% endif %}">
 
         {%- if localize -%}
           <i class="fas fa-language"></i>
@@ -10,5 +10,9 @@
         {% endif %}
 
         {{- label -}}:
+
+        {% if info is not empty %}
+            <i class="fa fa-info-circle" data-toggle="popover" title="{{ label }}" data-html="true" data-content="{{ info }}"></i>
+        {% endif %}
     </label>
 {%- endif -%}
