Info option test + fixes as a result

--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -12,7 +12,7 @@
         {{- label -}}:
 
         {% if info is not empty %}
-            <i class="fa fa-info-circle" data-toggle="popover" title="{{ label }}" data-html="true" data-content="{{ info }}"></i>
+            <icon class="fa fa-info-circle" data-toggle="popover" data-trigger="hover" title="{{ label }}" data-html="true" data-content="{{ info }}"></icon>
         {% endif %}
     </label>
 {%- endif -%}
