--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -7,6 +7,7 @@
         :name='{{ name|json_encode }}'
         :prefix='{{ prefix|json_encode }}'
         :field-class='{{ class|json_encode }}'
+        :required="{{ required|json_encode }}"
         :generate='{{ field.slugUseFields|join(',')|json_encode }}'
         :labels='{{ {
             'button_unlocked': 'slug.button_unlocked'|trans,
