--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -26,6 +26,7 @@
     name="{{ name }}"
     value="{{ value }}"
     :step="{{ step }}"
+    :required="{{ required|json_encode }}"
   ></editor-number>
 
 {% endblock %}
