WIP required fields

--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -26,5 +26,6 @@
         :labels='{{ labels }}'
         :extensions='{{ extensions|json_encode }}'
         :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+        :required='{{ required|json_encode }}'
     ></editor-image>
 {% endblock %}
