--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -27,5 +27,6 @@
             :labels='{{ labels }}'
             :extensions='{{ extensions|json_encode }}'
             :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+            :required='{{ required|json_encode }}'
     ></editor-file>
 {% endblock %}
