--- a/templates/_partials/fields/email.html.twig
+++ b/templates/_partials/fields/email.html.twig
@@ -5,5 +5,6 @@
         :id='{{ id|json_encode }}'
         :name='{{ name|json_encode }}'
         :value="{{ value|json_encode }}"
+        :required="{{ required|json_encode }}"
     ></editor-email>
 {% endblock %}
