--- a/assets/scss/modules/editor/_label.scss
+++ b/assets/scss/modules/editor/_label.scss
@@ -1,9 +1,9 @@
 //** Fields | Label
 
 .editor--label {
-  .required-label:after {
+  .required-label::after {
     content: "*";
-    color: #ff0000;
+    color: #f00;
   }
 }
 
