--- a/templates/_macro/_macro.html.twig
+++ b/templates/_macro/_macro.html.twig
@@ -37,13 +37,14 @@
 
 {% endapply %}{% endmacro %}
 
-{% macro generate_collection_fields(collectionField, fields) %}{% apply spaceless %}
+{% macro generate_collection_fields(collectionField, fields, compileTemplates) %}{% apply spaceless %}
     {% set fieldsHtml = [] %}
     {% for item_field in fields %}
         {% set collectionItemName = 'collections[' ~ collectionField.name ~ '][' ~ item_field.definition.name ~ ']' %}
         {# we create a 'dummy' hash from the current loop index, which is used to instantiate copies of collection item templates. #}
         {# The order is also submitted in an order field, so that collection items may be stored in the given order in the database. #}
-        {% set hash = loop.index0 %}
+        {% set hash = compileTemplates == true ? "{{ hash }}" : loop.index %}
+
         {% set collectionItemName = collectionItemName ~ '[' ~ hash ~ ']' %}
         {% set new_field %}
             {% set context = {
