--- a/templates/_partials/fields/collection.html.twig
+++ b/templates/_partials/fields/collection.html.twig
@@ -9,13 +9,13 @@
     {# get the html for all collection field already in the database #}
     {% set existing_fields = []|json_encode %}
     {% if field.value is defined %}
-        {% set existing_fields %}{{ macro.generate_collection_fields(field, field.value) }}{% endset %}
+        {% set existing_fields %}{{ macro.generate_collection_fields(field, field.value, false) }}{% endset %}
     {% endif %}
 
     {# get the html template for the collection fields defined in the field definition #}
     {% set templated_fields = "" %}
     {% if field.templates is defined %}
-        {% set templated_fields %}{{  macro.generate_collection_fields(field, field.templates) }}{% endset %}
+        {% set templated_fields %}{{  macro.generate_collection_fields(field, field.templates, true) }}{% endset %}
     {% endif %}
 
     <editor-collection
