Updating NPM deps, fixing height of checkbox

--- a/assets/scss/modules/listing/row/_checkbox.scss
+++ b/assets/scss/modules/listing/row/_checkbox.scss
@@ -2,7 +2,7 @@
 .listing--checkbox {
   width: $checkbox-row-width;
   user-select: none;
-  margin-bottom: $spacer*0.8;
+  margin-bottom: 2px;
 
   .custom-control {
     position: relative;
