File field can be reset

--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -7,6 +7,7 @@
     {% set labels = {
         'button_upload': 'image.button_upload'|trans,
         'button_from_library': 'image.button_from_library'|trans,
+        'button_remove': 'image.button_remove'|trans,
         'placeholder_filename': 'image.placeholder_filename'|trans,
         'placeholder_alt_text': 'image.placeholder_alt_text'|trans,
         'placeholder_title': 'image.placeholder_title'|trans,
