Readonly option works for most fields

--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -23,8 +23,10 @@
 {# Set type #}
 {% set type = field.type|default %}
 
-{# Set reqiored #}
+{# Set required #}
 {% set required = (field.definition.required|default) ? 1 : 0 %}
+
+{% set readonly = (field.definition.readonly|default) ? true : false %}
 
 {% set type_collection = (type in ['collection']) %}
 {% set type_set = (type in ['imagelist', 'filelist', 'set']) %}
