--- a/templates/_partials/fields/email.html.twig
+++ b/templates/_partials/fields/email.html.twig
@@ -6,5 +6,6 @@
         :name='{{ name|json_encode }}'
         :value="{{ value|json_encode }}"
         :required="{{ required|json_encode }}"
+        :readonly="{{ readonly|json_encode }}"
     ></editor-email>
 {% endblock %}
