--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -27,5 +27,6 @@
         :extensions='{{ extensions|json_encode }}'
         :attributes-link='{{ path('bolt_media_new')|json_encode }}'
         :required='{{ required|json_encode }}'
+        :readonly='{{ readonly|json_encode }}'
     ></editor-image>
 {% endblock %}
