--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -27,6 +27,7 @@
     value="{{ value }}"
     :step="{{ step }}"
     :required="{{ required|json_encode }}"
+    :readonly="{{ readonly|json_encode }}"
   ></editor-number>
 
 {% endblock %}
