--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -11,5 +11,6 @@
             :class='{{ class|json_encode }}'
             :hidden='{{ hidden|default('true') }}'
             :required='{{ required|json_encode }}'
+            :readonly='{{ readonly|json_encode }}'
         ></editor-password>
 {% endblock %}
