--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -23,5 +23,6 @@
         :form='{{ form|json_encode }}'
         :multiple="{{ multiple }}"
         :required="{{ required|json_encode }}"
+        :readonly="{{ readonly|json_encode }}"
     ></editor-select>
 {% endblock %}
