--- a/templates/_partials/fields/hidden.html.twig
+++ b/templates/_partials/fields/hidden.html.twig
@@ -2,5 +2,9 @@
 {% set id = 'field-' ~ field.name|default(name)|default('unnamed') %}
 {% set value = field.value|json_encode %}
 {% set required = field.definition.required ? 1 : 0 %}
+{% set readonly = field.definition.readonly ? true : false %}
 
-<input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}" {% if required == 1 %}required {% endif %}/>
+<input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}"
+       {% if required == 1 %}required {% endif %}
+       {% if readonly %}readonly {% endif %}
+/>
