--- a/templates/_partials/fields/templateselect.html.twig
+++ b/templates/_partials/fields/templateselect.html.twig
@@ -20,5 +20,6 @@
         :form='{{ form|json_encode }}'
         :multiple="{{ multiple }}"
         :required="{{ required|json_encode }}"
+        :readonly="{{ readonly|json_encode }}"
     ></editor-select>
 {% endblock %}
