--- a/templates/_partials/fields/textarea.html.twig
+++ b/templates/_partials/fields/textarea.html.twig
@@ -5,6 +5,7 @@
         :value='{{ value|json_encode }}'
         :label='{{ label|json_encode }}'
         :name='{{ name|json_encode }}'
-        :required="{{ required|json_encode }}"
+        :required='{{ required|json_encode }}'
+        :readonly='{{ readonly|json_encode }}'
     ></editor-textarea>
 {% endblock %}
