--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -16,18 +16,19 @@
     {% set extensions = field.definition.get('extensions')|default('') %}
 
     <editor-file
-            :name='{{ name|json_encode }}'
-            :filename='{{ field.get('filename')|json_encode }}'
-            :thumbnail='{{ field|thumbnail(width=400, height=300)|json_encode }}'
-            :title='{{ field.get('title')|json_encode }}'
-            :alt='{{ field.get('alt')|json_encode }}'
-            :media='{{ field.get('media')|json_encode }}'
-            :directory='{{ directory|json_encode }}'
-            :filelist='{{ filelist|json_encode }}'
-            :csrf-token='{{ csrf_token('upload')|json_encode }}'
-            :labels='{{ labels }}'
-            :extensions='{{ extensions|json_encode }}'
-            :attributes-link='{{ path('bolt_media_new')|json_encode }}'
-            :required='{{ required|json_encode }}'
+         :name='{{ name|json_encode }}'
+         :filename='{{ field.get('filename')|json_encode }}'
+         :thumbnail='{{ field|thumbnail(width=400, height=300)|json_encode }}'
+         :title='{{ field.get('title')|json_encode }}'
+         :alt='{{ field.get('alt')|json_encode }}'
+         :media='{{ field.get('media')|json_encode }}'
+         :directory='{{ directory|json_encode }}'
+         :filelist='{{ filelist|json_encode }}'
+         :csrf-token='{{ csrf_token('upload')|json_encode }}'
+         :labels='{{ labels }}'
+         :extensions='{{ extensions|json_encode }}'
+         :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+         :required='{{ required|json_encode }}'
+         :readonly='{{ readonly|json_encode }}'
     ></editor-file>
 {% endblock %}
