--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -17,6 +17,7 @@
         'button_edit_attributes': 'image.button_edit_attributes'|trans,
     }|json_encode %}
     {% set extensions = field.definition.get('extensions')|default('') %}
+    {% set limit = field.definition.get('limit')|default(200) %}
 
     <editor-filelist
         :files='{{ field.jsonvalue }}'
@@ -26,6 +27,7 @@
         :csrf-token='{{ csrf_token('upload')|json_encode }}'
         :labels='{{ labels }}'
         :extensions='{{  extensions|json_encode }}'
-            :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+        :attributes-link='{{ path('bolt_media_new')|json_encode }}'
+        :limit='{{ limit|json_encode }}'
     ></editor-filelist>
 {% endblock %}
