Replace <icon> with <i> in infobox popover icon

--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -13,7 +13,7 @@
         {% if required %} <span class="required-label"></span> {% endif %}
 
         {% if info is not empty %}
-            <icon class="fa fa-info-circle" data-toggle="popover" data-trigger="hover" title="{{ label }}" data-html="true" data-content="{{ info }}"></icon>
+            <i class="fa fa-info-circle" data-toggle="popover" data-trigger="hover" title="{{ label }}" data-html="true" data-content="{{ info }}"></i>
         {% endif %}
     </label>
 {%- endif -%}
