--- a/templates/_partials/fields/collection.html.twig
+++ b/templates/_partials/fields/collection.html.twig
@@ -5,6 +5,7 @@
     {% set labels = {
         'add_collection_item': 'collection.add_item'|trans({'%name%': field.definition.label}),
     } %}
+    {% set limit = field.definition.get('limit')|default(200) %}
 
     {# get the html for all collection field already in the database #}
     {% set existing_fields = []|json_encode %}
@@ -19,9 +20,10 @@
     {% endif %}
 
     <editor-collection
-            :existing-fields='{{ existing_fields }}'
-            :templates='{{ templated_fields }}'
-            :labels='{{ labels | json_encode }}'
+      :existing-fields='{{ existing_fields }}'
+      :templates='{{ templated_fields }}'
+      :labels='{{ labels | json_encode }}'
+      :limit='{{ limit | json_encode }}'
     ></editor-collection>
 
 {% endblock %}
