--- a/templates/_partials/fields/_base.html.twig
+++ b/templates/_partials/fields/_base.html.twig
@@ -26,7 +26,11 @@
 {# Set required #}
 {% set required = (field.definition.required|default) ? 1 : 0 %}
 
+{# Set readonly #}
 {% set readonly = (field.definition.readonly|default) ? true : false %}
+
+{# Set error validation message #}
+{% set errormessage = field.definition.get('error')|default(false) %}
 
 {% set type_collection = (type in ['collection']) %}
 {% set type_set = (type in ['imagelist', 'filelist', 'set']) %}
