Error option for text field

--- a/templates/_partials/fields/text.html.twig
+++ b/templates/_partials/fields/text.html.twig
@@ -20,6 +20,7 @@
             :disabled='{{ disabled|json_encode }}'
             :required='{{ required|json_encode }}'
             :readonly='{{ readonly|json_encode }}'
+            :errormessage='{{ errormessage|json_encode }}'
         ></editor-text>
     {% else %}
         <span
