--- a/templates/_partials/fields/embed.html.twig
+++ b/templates/_partials/fields/embed.html.twig
@@ -14,6 +14,7 @@
         :thumbnail='{{ field.get('thumbnail')|json_encode }}'
         :required='{{ required|json_encode }}'
         :readonly='{{ readonly|json_encode }}'
+        :errormessage='{{ errormessage|json_encode }}'
         :labels="{{ {
             'content_url': 'editor_embed.content_url'|trans,
             'placeholder_content_url': 'editor_embed.placeholder_content_url'|trans,
