File field supporst error option

--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -30,5 +30,6 @@
          :attributes-link='{{ path('bolt_media_new')|json_encode }}'
          :required='{{ required|json_encode }}'
          :readonly='{{ readonly|json_encode }}'
+         :errormessage='{{ errormessage|json_encode }}'
     ></editor-file>
 {% endblock %}
