--- a/templates/_partials/fields/generic.html.twig
+++ b/templates/_partials/fields/generic.html.twig
@@ -5,5 +5,6 @@
            type="text" value="{{ value|join(", ") }}" {{ attributes|default()|raw }}
            {% if required == 1 %}required {% endif %}
            {% if readonly %}readonly {% endif %}
+           {% if errormessage %}data-errormessage="{{ errormessage }}" {% endif %}
     >
 {% endblock %}
