Number field supports error option

--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -28,6 +28,7 @@
     :step="{{ step }}"
     :required="{{ required|json_encode }}"
     :readonly="{{ readonly|json_encode }}"
+    :errormessage="{{ errormessage|json_encode }}"
   ></editor-number>
 
 {% endblock %}
