Password field supports error option

--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -12,5 +12,6 @@
             :hidden='{{ hidden|default('true') }}'
             :required='{{ required|json_encode }}'
             :readonly='{{ readonly|json_encode }}'
+            :errormessage='{{ errormessage|json_encode }}'
         ></editor-password>
 {% endblock %}
