Select field supports error option

--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -24,5 +24,6 @@
         :multiple="{{ multiple }}"
         :required="{{ required|json_encode }}"
         :readonly="{{ readonly|json_encode }}"
+        :errormessage='{{ errormessage|json_encode }}'
     ></editor-select>
 {% endblock %}
