--- a/templates/_partials/fields/slug.html.twig
+++ b/templates/_partials/fields/slug.html.twig
@@ -10,6 +10,7 @@
         :required='{{ required|json_encode }}'
         :readonly='{{ readonly|json_encode }}'
         :generate='{{ field.slugUseFields|join(',')|json_encode }}'
+        :errormessage='{{ errormessage|json_encode }}'
         :labels='{{ {
             'button_unlocked': 'slug.button_unlocked'|trans,
             'button_locked': 'slug.button_locked'|trans,
