Templateselect field supports error option

--- a/templates/_partials/fields/templateselect.html.twig
+++ b/templates/_partials/fields/templateselect.html.twig
@@ -21,5 +21,6 @@
         :multiple="{{ multiple }}"
         :required="{{ required|json_encode }}"
         :readonly="{{ readonly|json_encode }}"
+        :errormessage='{{ errormessage|json_encode }}'
     ></editor-select>
 {% endblock %}
