--- a/templates/_partials/fields/textarea.html.twig
+++ b/templates/_partials/fields/textarea.html.twig
@@ -7,5 +7,6 @@
         :name='{{ name|json_encode }}'
         :required='{{ required|json_encode }}'
         :readonly='{{ readonly|json_encode }}'
+        :errormessage='{{ errormessage|json_encode }}'
     ></editor-textarea>
 {% endblock %}
