Order by author works

--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -57,7 +57,7 @@
     ></listing-select-box>
 
     {% set filterOptions = {
-        'id': "Id", 'title': 'Title', 'Author': 'Author', 'status': 'Status', 'createdAt': 'Created date',
+        'id': "Id", 'title': 'Title', 'author': 'Author', 'status': 'Status', 'createdAt': 'Created date',
         'modifiedAt': 'Modified date', 'publishedAt': 'Published date', 'depublishedAt': 'Depublished date'
     } %}
 
