--- a/templates/_partials/fields/data.html.twig
+++ b/templates/_partials/fields/data.html.twig
@@ -9,6 +9,7 @@
 <input type="hidden" id="{{ id }}" name="{{ name }}" value="{{ value }}"
        {% if required == 1 %}required {% endif %}
        {% if errormessage %}data-errormessage="{{ errormessage }}" {% endif %}
+       {% if pattern %}pattern="{{ pattern }}" {% endif %}
 />
 <pre>
 {{ field.value|json_encode(constant('JSON_PRETTY_PRINT')) }}
