--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -31,5 +31,6 @@
          :required='{{ required|json_encode }}'
          :readonly='{{ readonly|json_encode }}'
          :errormessage='{{ errormessage|json_encode }}'
+         :pattern='{{ pattern|json_encode }}'
     ></editor-file>
 {% endblock %}
