Generic field supports pattern option

--- a/templates/_partials/fields/generic.html.twig
+++ b/templates/_partials/fields/generic.html.twig
@@ -6,5 +6,6 @@
            {% if required == 1 %}required {% endif %}
            {% if readonly %}readonly {% endif %}
            {% if errormessage %}data-errormessage="{{ errormessage }}" {% endif %}
+           {% if pattern %}pattern="{{ pattern }}" {% endif %}
     >
 {% endblock %}
