Image field supports pattern option

--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -28,6 +28,7 @@
         :required='{{ required|json_encode }}'
         :readonly='{{ readonly|json_encode }}'
         :errormessage='{{ errormessage|json_encode }}'
+        :pattern='{{ pattern|json_encode }}'
         {% if field.includeAlt %} :alt='{{ field.get('alt')|json_encode }}' {% endif %}
     ></editor-image>
 {% endblock %}
