--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -29,6 +29,7 @@
     :required="{{ required|json_encode }}"
     :readonly="{{ readonly|json_encode }}"
     :errormessage="{{ errormessage|json_encode }}"
+    :pattern="{{ pattern|json_encode }}"
   ></editor-number>
 
 {% endblock %}
