--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -13,5 +13,6 @@
             :required='{{ required|json_encode }}'
             :readonly='{{ readonly|json_encode }}'
             :errormessage='{{ errormessage|json_encode }}'
+            :pattern='{{ pattern|json_encode }}'
         ></editor-password>
 {% endblock %}
