--- a/templates/_partials/fields/textarea.html.twig
+++ b/templates/_partials/fields/textarea.html.twig
@@ -8,5 +8,6 @@
         :required='{{ required|json_encode }}'
         :readonly='{{ readonly|json_encode }}'
         :errormessage='{{ errormessage|json_encode }}'
+        :pattern='{{ pattern|json_encode }}'
     ></editor-textarea>
 {% endblock %}
