Field support for placeholder option

--- a/templates/_partials/fields/file.html.twig
+++ b/templates/_partials/fields/file.html.twig
@@ -32,5 +32,6 @@
          :readonly='{{ readonly|json_encode }}'
          :errormessage='{{ errormessage|json_encode }}'
          :pattern='{{ pattern|json_encode }}'
+         :placeholder='{{ placeholder|json_encode }}'
     ></editor-file>
 {% endblock %}
