--- a/templates/_partials/fields/generic.html.twig
+++ b/templates/_partials/fields/generic.html.twig
@@ -7,5 +7,6 @@
            {% if readonly %}readonly {% endif %}
            {% if errormessage %}data-errormessage="{{ errormessage }}" {% endif %}
            {% if pattern %}pattern="{{ pattern }}" {% endif %}
+           {% if placeholder %}placeholder="{{ placeholder }}" {% endif %}
     >
 {% endblock %}
