--- a/templates/_partials/fields/image.html.twig
+++ b/templates/_partials/fields/image.html.twig
@@ -29,6 +29,7 @@
         :readonly='{{ readonly|json_encode }}'
         :errormessage='{{ errormessage|json_encode }}'
         :pattern='{{ pattern|json_encode }}'
+        :placeholder='{{ placeholder|json_encode }}'
         {% if field.includeAlt %} :alt='{{ field.get('alt')|json_encode }}' {% endif %}
     ></editor-image>
 {% endblock %}
