--- a/templates/_partials/fields/number.html.twig
+++ b/templates/_partials/fields/number.html.twig
@@ -30,6 +30,7 @@
     :readonly="{{ readonly|json_encode }}"
     :errormessage="{{ errormessage|json_encode }}"
     :pattern="{{ pattern|json_encode }}"
+    :placeholder="{{ placeholder|json_encode }}"
   ></editor-number>
 
 {% endblock %}
