--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -14,5 +14,6 @@
             :readonly='{{ readonly|json_encode }}'
             :errormessage='{{ errormessage|json_encode }}'
             :pattern='{{ pattern|json_encode }}'
+            :placeholder='{{ placeholder|json_encode }}'
         ></editor-password>
 {% endblock %}
