--- a/templates/_partials/fields/text.html.twig
+++ b/templates/_partials/fields/text.html.twig
@@ -22,6 +22,7 @@
             :readonly='{{ readonly|json_encode }}'
             :errormessage='{{ errormessage|json_encode }}'
             :pattern='{{ pattern|json_encode }}'
+            :placeholder='{{ placeholder|json_encode }}'
         ></editor-text>
     {% else %}
         <span
