--- a/templates/_partials/fields/textarea.html.twig
+++ b/templates/_partials/fields/textarea.html.twig
@@ -9,5 +9,6 @@
         :readonly='{{ readonly|json_encode }}'
         :errormessage='{{ errormessage|json_encode }}'
         :pattern='{{ pattern|json_encode }}'
+        :placeholder='{{ placeholder|json_encode }}'
     ></editor-textarea>
 {% endblock %}
