--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -19,11 +19,11 @@
             {{ block.content }}
 
             {% set edit_link = block|edit_link %}
-            {% set content_link = block|link %}
+            {% set content_link = block.content_link|default(block|link) %}
             {% if content_link or edit_link %}
                 <p>
                 {%- if content_link %}
-                   <a href="{{ relative_path(content_link|e) }}">{{ __('general.phrase.read-more') }}</a>
+                   <a href="{{ absolute_link(content_link|e) }}">{{ __('general.phrase.read-more') }}</a>
                 {% endif -%}
                 {%- if edit_link %}
                     / <a href="{{ edit_link }}">{{ __('general.phrase.edit') }}</a>
